--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to My Page</h1> <!-- change this heading to your name -->
+      <h1>Welcome to Jacob Brown's Page</h1>
     </header>
 
     <main>
-      <!-- ====== ABOUT SECTION (edit the text) ====== -->
+      <!-- ====== ABOUT SECTION ====== -->
       <h2>About Me</h2>
       <p>I am a student at Queen’s School of Computing. I’m interested in sports, staying active, thrifting, and socializing.</p>
 
@@ -22,14 +22,14 @@
       <!-- ====== PROJECTS/COURSES (add or rename items to courses instead of projects) ====== -->
       <h2>Projects</h2>
       <ul>
-        <li>Project One — one sentence description.</li>
-        <li>Project Two — coming soon.</li>
+        <li>Cisc 102 — Discrete Structures</li>
+        <li>Cisc 121 — Algorithims</li>
       </ul>
 
       <!-- ====== CONTACT (update your links) ====== -->
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:student@queensu.ca">student@queensu.ca</a></p>
-      <p>LinkedIn: <a href="#">add your link here</a></p>
+      <p>Email: <a href="mailto:25nxfc@queensu.ca">25nxfc@queensu.ca</a></p>
+      <p>LinkedIn: <a href="#">https://ca.linkedin.com/in/jacob-brown-47bb2a291</a></p>
     </main>
   </body>
 </html>
