--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-      <!-- ====== ABOUT SECTION ====== -->
+      <!-- ===== ABOUT SECTION ===== -->
       <h2>About Me</h2>
       <p>I am a student at Queen’s School of Computing. I’m interested in sports, staying active, thrifting, and socializing.</p>
 
